mycrudapp-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: mycrudapp
    name: mycrudapp-svc
spec:
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
        app: mycrudapp
    type: ClusterIP
