ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: mycrudapp-ingress
spec:
    rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: mycrudapp-svc
            servicePort: 5000
